<resources>
    <string name="app_name">Epicure</string>

    <!-- Item Activty -->
    <string name="cart_detail_header">CART DETAILS</string>
    <string name="cart_clear_all">Clear All</string>
    <string name="cart_complete_order">COMPLETE ORDER</string>
    <string name="multiplier">X</string>
    <string name="back_to_items">BACK TO ITEMS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete_all_orders">Are you sure you want to delete all orders?</string>
    <string name="complete_order_question">"Are you sure you want to complete order?</string>
    <string name="cart_clean">Your cart is as clean as the first day.</string>
    <string name="sent_order">Your order has been successfully completed. :)</string>
    <string name="failed_order">Something went wrong. :(</string>
    <string name="sending_order">Your order is being completed, please wait.</string>

    <!-- Places activity -->
    <string name="image_contentdescription">Contentdescription</string>
    <string name="menu_cart">Cart</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_item_1">Places</string>
    <string name="nav_drawer_item_2">Favourites</string>
    <string name="nav_drawer_item_3">Orders</string>
    <string name="nav_drawer_item_4">Profile</string>
    <string name="nav_drawer_item_5">Logout</string>
    <string name="nav_drawer_sub_menu">Communicate</string>
    <string name="nav_drawer_sub_item1">Share</string>

    <!-- Splash Screen -->
    <string name="splash_screen_sign_up_btn"><![CDATA[Make an account >]]></string>
    <string name="splash_screen_login_btn"><![CDATA[Log into your account >]]></string>
    <string name="splash_screen_main_btn"><![CDATA[Continue without login >]]></string>

    <!-- Sign up -->
    <string name="sign_up_subtitle_1">Account info.</string>
    <string name="sign_up_subtitle_2">Personal info.</string>
    <string name="sign_up_next"><![CDATA[Next >]]></string>
    <string name="sign_up_previous"><![CDATA[< Previous]]></string>
    <string name="signup_hint_full_name">Full name</string>
    <string name="signup_retype_password_hint">Retype password</string>
    <string name="sign_up_hint_phone">Contact no.</string>
    <string name="sign_up_address">Home address</string>
    <string name="sign_up_location">Verify location on map</string>
    <string name="sign_up_welcome">Welcome!</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="to_log_in">Already have an account?\nLog in</string>
    <string name="location_send_btn">Send location</string>

    <!-- Login -->
    <string name="login_username_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="to_sign_up"><center>Don\'t own an account?\nSign up instead</center></string>

    <!-- Shared preferences-->
    <string name="shared_pref_file_name">SharedPrefFileName</string>
    <string name="is_logged_in">isLoggedIn</string>
    <string name="spk_name">spk_name</string>
    <string name="spk_email">spk_email</string>
    <string name="spk_password">spk_password</string>
    <string name="spk_latitude">spk_latitude</string>
    <string name="spk_longitude">spk_longitude</string>
    <string name="spk_contact">spk_contact</string>
    <string name="spk_address">spk_address</string>
    <string name="spk_notification_token">spk_notification_token</string>

    <string name="token_registration_complete">token_registration_complete</string>
    <string name="topic_global">topic_global</string>
    <string name="push_notification">push_notification</string>
    <string name="spk_user_id">spk_user_id</string>

</resources>
