<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_1"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/nav_drawer_item_1" />
        <item
            android:id="@+id/nav_item_2"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_drawer_item_2" />
        <item
            android:id="@+id/nav_item_3"
            android:icon="@drawable/ic_order"
            android:title="@string/nav_drawer_item_3" />
        <item
            android:id="@+id/nav_item_4"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_drawer_item_4" />
        <item
            android:id="@+id/nav_item_5"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_drawer_item_5" />
    </group>

    <item android:title="@string/nav_drawer_sub_menu">
        <menu>
            <item
                android:id="@+id/nav_sub_item_1"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_drawer_sub_item1" />
        </menu>
    </item>

</menu>
